[Button] Estilos padrão de botão

--- a/framework-css/playground.html
+++ b/framework-css/playground.html
@@ -6,6 +6,14 @@
     </head>
 
     <body>
-        <button class="btn">Botão 1</button>
+        <button class="btn btn-primario">Primario</button>        
+        <button class="btn btn-secundario">Secundario</button>        
+        <button class="btn btn-sucesso">Sucesso</button>
+        <button class="btn btn-perigo">Perigo</button>
+        <button class="btn btn-aviso">Aviso</button>
+        <button class="btn btn-informacao">Informacao</button>
+        <button class="btn btn-claro">Claro</button>
+        <button class="btn btn-escuro">Escuro</button>        
+        <button class="btn btn-link">Link</button>
     </body>
 </html>
