--- a/framework-css/playground.html
+++ b/framework-css/playground.html
@@ -6,14 +6,14 @@
     </head>
 
     <body>
-        <button class="btn btn-primario">Primario</button>        
-        <button class="btn btn-secundario">Secundario</button>        
-        <button class="btn btn-sucesso">Sucesso</button>
-        <button class="btn btn-perigo">Perigo</button>
-        <button class="btn btn-aviso">Aviso</button>
-        <button class="btn btn-informacao">Informacao</button>
-        <button class="btn btn-claro">Claro</button>
-        <button class="btn btn-escuro">Escuro</button>        
-        <button class="btn btn-link">Link</button>
+        <button class="btn btn-primario-contorno">Primario</button>        
+        <button class="btn btn-secundario-contorno">Secundario</button>        
+        <button class="btn btn-sucesso-contorno">Sucesso</button>
+        <button class="btn btn-perigo-contorno">Perigo</button>
+        <button class="btn btn-aviso-contorno">Aviso</button>
+        <button class="btn btn-informacao-contorno">Informacao</button>
+        <button class="btn btn-claro-contorno">Claro</button>
+        <button class="btn btn-escuro-contorno">Escuro</button>        
+        <button class="btn btn-link contorno">Link</button>
     </body>
 </html>
