[Button] Tamanho Botões

--- a/framework-css/playground.html
+++ b/framework-css/playground.html
@@ -6,14 +6,14 @@
     </head>
 
     <body>
-        <button class="btn btn-primario-contorno">Primario</button>        
-        <button class="btn btn-secundario-contorno">Secundario</button>        
-        <button class="btn btn-sucesso-contorno">Sucesso</button>
-        <button class="btn btn-perigo-contorno">Perigo</button>
-        <button class="btn btn-aviso-contorno">Aviso</button>
-        <button class="btn btn-informacao-contorno">Informacao</button>
-        <button class="btn btn-claro-contorno">Claro</button>
-        <button class="btn btn-escuro-contorno">Escuro</button>        
-        <button class="btn btn-link contorno">Link</button>
+        <button class="btn btn-primario-contorno btn-block">Primario</button>        
+        <button class="btn btn-secundario-contorno btn-block">Secundario</button>        
+        <button class="btn btn-sucesso-contorno btn-block">Sucesso</button>
+        <button class="btn btn-perigo-contorno btn-block">Perigo</button>
+        <button class="btn btn-aviso-contorno btn-block">Aviso</button>
+        <button class="btn btn-informacao-contorno btn-block">Informacao</button>
+        <button class="btn btn-claro-contorno btn-block">Claro</button>
+        <button class="btn btn-escuro-contorno btn-block">Escuro</button>        
+        <button class="btn btn-link contorno btn-block">Link</button>
     </body>
 </html>
