[Table] Estrutura Básica tabela

--- a/framework-css/playground.html
+++ b/framework-css/playground.html
@@ -6,7 +6,7 @@
     </head>
 
     <body>
-        <button class="btn btn-primario">Primario</button>        
+        <!-- <button class="btn btn-primario">Primario</button>        
         <button class="btn btn-secundario">Secundario</button>        
         <button class="btn btn-sucesso">Sucesso</button>
         <button class="btn btn-perigo">Perigo</button>
@@ -14,6 +14,49 @@
         <button class="btn btn-informacao">Informacao</button>
         <button class="btn btn-claro">Claro</button>
         <button class="btn btn-escuro">Escuro</button>        
-        <button class="btn btn-link">Link</button>
+        <button class="btn btn-link">Link</button> -->
+
+        <table class="tabela">
+            <thead>
+                <tr>
+                    <th>#</th>
+                    <th>Um</th>
+                    <th>Dois</th>
+                    <th>Três</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>1</td>
+                    <td>Pi</td>
+                    <td>Pi</td>
+                    <td>Pi</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>Po</td>
+                    <td>Po</td>
+                    <td>Po</td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td>Pi</td>
+                    <td>Pi</td>
+                    <td>Pi</td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td>Po</td>
+                    <td>Po</td>
+                    <td>Po</td>
+                </tr>
+                <tr>
+                    <td>5</td>
+                    <td>Pi</td>
+                    <td>Pi</td>
+                    <td>Pi</td>
+                </tr>
+            </tbody>
+        </table>
     </body>
 </html>
