--- a/framework-css/playground.html
+++ b/framework-css/playground.html
@@ -16,8 +16,51 @@
         <button class="btn btn-escuro">Escuro</button>        
         <button class="btn btn-link">Link</button> -->
 
-        <table class="tabela">
-            <thead>
+        <table class="tabela tabela-escura">
+            <thead class="cabecalho-claro">
+                <tr>
+                    <th>#</th>
+                    <th>Um</th>
+                    <th>Dois</th>
+                    <th>Três</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>1</td>
+                    <td>Pi</td>
+                    <td>Pi</td>
+                    <td>Pi</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>Po</td>
+                    <td>Po</td>
+                    <td>Po</td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td>Pi</td>
+                    <td>Pi</td>
+                    <td>Pi</td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td>Po</td>
+                    <td>Po</td>
+                    <td>Po</td>
+                </tr>
+                <tr>
+                    <td>5</td>
+                    <td>Pi</td>
+                    <td>Pi</td>
+                    <td>Pi</td>
+                </tr>
+            </tbody>
+        </table>
+
+        <table class="tabela tabela">
+            <thead class="cabecalho-escuro">
                 <tr>
                     <th>#</th>
                     <th>Um</th>
