[Table] Tabela Zebrada e Tabela com borda/sem borda

--- a/framework-css/playground.html
+++ b/framework-css/playground.html
@@ -16,8 +16,8 @@
         <button class="btn btn-escuro">Escuro</button>        
         <button class="btn btn-link">Link</button> -->
 
-        <table class="tabela tabela-escura">
-            <thead class="cabecalho-claro">
+        <table class="tabela com-bordas">
+            <thead>
                 <tr>
                     <th>#</th>
                     <th>Um</th>
@@ -59,8 +59,8 @@
             </tbody>
         </table>
 
-        <table class="tabela tabela">
-            <thead class="cabecalho-escuro">
+        <table class="tabela sem-bordas">
+            <thead>
                 <tr>
                     <th>#</th>
                     <th>Um</th>
@@ -101,5 +101,92 @@
                 </tr>
             </tbody>
         </table>
+        
+        <table class="tabela tabela-escura com-bordas">
+            <thead>
+                <tr>
+                    <th>#</th>
+                    <th>Um</th>
+                    <th>Dois</th>
+                    <th>Três</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>1</td>
+                    <td>Pi</td>
+                    <td>Pi</td>
+                    <td>Pi</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>Po</td>
+                    <td>Po</td>
+                    <td>Po</td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td>Pi</td>
+                    <td>Pi</td>
+                    <td>Pi</td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td>Po</td>
+                    <td>Po</td>
+                    <td>Po</td>
+                </tr>
+                <tr>
+                    <td>5</td>
+                    <td>Pi</td>
+                    <td>Pi</td>
+                    <td>Pi</td>
+                </tr>
+            </tbody>
+        </table>
+        
+        <table class="tabela tabela-escura sem-bordas">
+            <thead>
+                <tr>
+                    <th>#</th>
+                    <th>Um</th>
+                    <th>Dois</th>
+                    <th>Três</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>1</td>
+                    <td>Pi</td>
+                    <td>Pi</td>
+                    <td>Pi</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>Po</td>
+                    <td>Po</td>
+                    <td>Po</td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td>Pi</td>
+                    <td>Pi</td>
+                    <td>Pi</td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td>Po</td>
+                    <td>Po</td>
+                    <td>Po</td>
+                </tr>
+                <tr>
+                    <td>5</td>
+                    <td>Pi</td>
+                    <td>Pi</td>
+                    <td>Pi</td>
+                </tr>
+            </tbody>
+        </table>
+
     </body>
 </html>
