--- a/framework-css/playground.html
+++ b/framework-css/playground.html
@@ -16,7 +16,7 @@
         <button class="btn btn-escuro">Escuro</button>        
         <button class="btn btn-link">Link</button> -->
 
-        <table class="tabela com-bordas">
+        <table class="tabela tabela-flutuar">
             <thead>
                 <tr>
                     <th>#</th>
@@ -59,7 +59,7 @@
             </tbody>
         </table>
 
-        <table class="tabela sem-bordas">
+        <table class="tabela tabela-escura tabela-flutuar-escuro">
             <thead>
                 <tr>
                     <th>#</th>
@@ -102,91 +102,6 @@
             </tbody>
         </table>
         
-        <table class="tabela tabela-escura com-bordas">
-            <thead>
-                <tr>
-                    <th>#</th>
-                    <th>Um</th>
-                    <th>Dois</th>
-                    <th>Três</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>1</td>
-                    <td>Pi</td>
-                    <td>Pi</td>
-                    <td>Pi</td>
-                </tr>
-                <tr>
-                    <td>2</td>
-                    <td>Po</td>
-                    <td>Po</td>
-                    <td>Po</td>
-                </tr>
-                <tr>
-                    <td>3</td>
-                    <td>Pi</td>
-                    <td>Pi</td>
-                    <td>Pi</td>
-                </tr>
-                <tr>
-                    <td>4</td>
-                    <td>Po</td>
-                    <td>Po</td>
-                    <td>Po</td>
-                </tr>
-                <tr>
-                    <td>5</td>
-                    <td>Pi</td>
-                    <td>Pi</td>
-                    <td>Pi</td>
-                </tr>
-            </tbody>
-        </table>
-        
-        <table class="tabela tabela-escura sem-bordas">
-            <thead>
-                <tr>
-                    <th>#</th>
-                    <th>Um</th>
-                    <th>Dois</th>
-                    <th>Três</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>1</td>
-                    <td>Pi</td>
-                    <td>Pi</td>
-                    <td>Pi</td>
-                </tr>
-                <tr>
-                    <td>2</td>
-                    <td>Po</td>
-                    <td>Po</td>
-                    <td>Po</td>
-                </tr>
-                <tr>
-                    <td>3</td>
-                    <td>Pi</td>
-                    <td>Pi</td>
-                    <td>Pi</td>
-                </tr>
-                <tr>
-                    <td>4</td>
-                    <td>Po</td>
-                    <td>Po</td>
-                    <td>Po</td>
-                </tr>
-                <tr>
-                    <td>5</td>
-                    <td>Pi</td>
-                    <td>Pi</td>
-                    <td>Pi</td>
-                </tr>
-            </tbody>
-        </table>
 
     </body>
 </html>
