[Grid System] Linhas e colunas

--- a/framework-css/playground.html
+++ b/framework-css/playground.html
@@ -16,7 +16,7 @@
         <button class="btn btn-escuro">Escuro</button>        
         <button class="btn btn-link">Link</button> -->
 
-        <table class="tabela tabela-flutuar">
+        <!-- <table class="tabela tabela-flutuar">
             <thead>
                 <tr>
                     <th>#</th>
@@ -100,8 +100,40 @@
                     <td>Pi</td>
                 </tr>
             </tbody>
-        </table>
+        </table> -->
         
+        <div class="col col-1 borda"></div>
+        <div class="col col-1 borda"></div>
+        <div class="col col-1 borda"></div>
+        <div class="col col-1 borda"></div>
+        <div class="col col-1 borda"></div>
+        <div class="col col-1 borda"></div>
+        <div class="col col-1 borda"></div>
+        <div class="col col-1 borda"></div>
+        <div class="col col-1 borda"></div>
+        <div class="col col-1 borda"></div>
+        <div class="col col-1 borda"></div>
+        <div class="col col-1 borda"></div>
+
+        <div class="row borda-row">
+            <div class="col col-6 borda">
+                <div class="row borda-row">
+                    <div class="col col-1 borda"></div>
+                    <div class="col col-1 borda"></div>
+                    <div class="col col-1 borda"></div>
+                    <div class="col col-1 borda"></div>
+                    <div class="col col-1 borda"></div>
+                    <div class="col col-1 borda"></div>
+                    <div class="col col-1 borda"></div>
+                    <div class="col col-1 borda"></div>
+                    <div class="col col-1 borda"></div>
+                    <div class="col col-1 borda"></div>
+                    <div class="col col-1 borda"></div>
+                    <div class="col col-1 borda"></div>
+                </div>
+            </div>
+            <div class="col col-6 borda"></div>
+        </div>
 
     </body>
 </html>
