--- a/framework-css/playground.html
+++ b/framework-css/playground.html
@@ -102,7 +102,7 @@
             </tbody>
         </table> -->
         
-        <div class="col col-1 borda"></div>
+        <!-- <div class="col col-1 borda"></div>
         <div class="col col-1 borda"></div>
         <div class="col col-1 borda"></div>
         <div class="col col-1 borda"></div>
@@ -133,7 +133,7 @@
                 </div>
             </div>
             <div class="col col-6 borda"></div>
-        </div>
+        </div> -->
 
     </body>
 </html>
